force-app/main/default/objects/Account/fields/Assortment_Total_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Assortment_Total_Minimum__c</fullName>
    <label>Assortment Total Minimum</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>