force-app/main/default/objects/Account/fields/Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Churn Risk</label>
    <type>Checkbox</type>
</CustomField>