force-app/main/default/objects/Account/fields/ckz_Account_Hierarchy_Id18s__c.field-meta.xml
<CustomField>
    <fullName>ckz_Account_Hierarchy_Id18s__c</fullName>
    <formula>IF(ISBLANK(ParentId), ckz_Id18__c, 
IF(ISBLANK(Parent.ParentId), ckz_Id18__c&amp; &apos;,&apos; &amp; Parent.ckz_Id18__c, 
IF(ISBLANK(Parent.Parent.ParentId), ckz_Id18__c&amp; &apos;,&apos; &amp; Parent.ckz_Id18__c&amp; &apos;,&apos; &amp; Parent.Parent.ckz_Id18__c, 
IF(ISBLANK(Parent.Parent.Parent.ParentId), ckz_Id18__c &amp; &apos;,&apos; &amp; Parent.ckz_Id18__c &amp; &apos;,&apos; &amp; Parent.Parent.ckz_Id18__c &amp; &apos;,&apos; &amp; Parent.Parent.Parent.ckz_Id18__c, 
IF(ISBLANK(Parent.Parent.Parent.Parent.ParentId), ckz_Id18__c&amp; &apos;,&apos; &amp; Parent.ckz_Id18__c &amp; &apos;,&apos; &amp; Parent.Parent.ckz_Id18__c &amp; &apos;,&apos; &amp; Parent.Parent.Parent.ckz_Id18__c &amp; &apos;,&apos; &amp; Parent.Parent.Parent.Parent.ckz_Id18__c, 
ckz_Id18__c &amp; &apos;,&apos; &amp; Parent.ckz_Id18__c &amp; &apos;,&apos; &amp; Parent.Parent.ckz_Id18__c &amp; &apos;,&apos; &amp; Parent.Parent.Parent.ckz_Id18__c &amp; &apos;,&apos; &amp; Parent.Parent.Parent.Parent.ckz_Id18__c &amp; &apos;,&apos; &amp; Parent.Parent.Parent.Parent.Parent.ckz_Id18__c)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Hierarchy Id18s</label>
    <type>Text</type>
</CustomField>