force-app/main/default/objects/Account/fields/ckz_B2B_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>ckz_B2B_Credit_Limit__c</fullName>
    <label>B2B Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>