force-app/main/default/objects/Account/fields/ckz_B2B_Reward_Points_Balance__c.field-meta.xml
<CustomField>
    <fullName>ckz_B2B_Reward_Points_Balance__c</fullName>
    <label>B2B Reward Points Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>