force-app/main/default/objects/Account/fields/ckz_B2B_Reward_Points_Cost_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>ckz_B2B_Reward_Points_Cost_Multiplier__c</fullName>
    <defaultValue>0.01</defaultValue>
    <description>Amount of points needed per dollar cost. For example, 0.2 means 5 points = $1. Default of 0.01 means 100 points = $1.</description>
    <inlineHelpText>Amount of points needed per dollar cost. For example, 0.2 means 5 points = $1. Default of 0.01 means 100 points = $1.</inlineHelpText>
    <label>B2B Reward Points Cost Multiplier</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>