force-app/main/default/objects/Account/fields/ckz_B2B_Reward_Points_Earned_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>ckz_B2B_Reward_Points_Earned_Multiplier__c</fullName>
    <defaultValue>1</defaultValue>
    <description>How many points earned for every dollar spent.</description>
    <inlineHelpText>How many points earned for every dollar spent.</inlineHelpText>
    <label>B2B Reward Points Earned Multiplier</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>