force-app/main/default/objects/Account/fields/ckz_B2B_Reward_Points_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ckz_B2B_Reward_Points_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B Reward Points Enabled</label>
    <type>Checkbox</type>
</CustomField>