force-app/main/default/objects/Account/fields/ckz_Id18__c.field-meta.xml
<CustomField>
    <fullName>ckz_Id18__c</fullName>
    <label>Id18</label>
    <length>255</length>
    <type>Text</type>
</CustomField>