force-app/main/default/objects/Account/fields/Default_Location__c.field-meta.xml
<CustomField>
    <fullName>Default_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>