force-app/main/default/objects/Account/fields/Enable_Assortment_Total_Rule__c.field-meta.xml
<CustomField>
    <fullName>Enable_Assortment_Total_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Assortment Total Rule</label>
    <type>Checkbox</type>
</CustomField>