force-app/main/default/objects/Account/fields/Former_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Former_Account_Name__c</fullName>
    <description>Used to rename the account, but still have it show up in search results under its old name.</description>
    <label>Former Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>