force-app/main/default/objects/Account/fields/Global_Business_Name_Data__c.field-meta.xml
<CustomField>
    <fullName>Global_Business_Name_Data__c</fullName>
    <formula>ENCODED:{!ID:DandbCompany.GlobalUltimateBusinessName}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Business Name</label>
    <type>Text</type>
</CustomField>