force-app/main/default/objects/Account/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <formula>ENCODED:[treatNullAsNull]{!ID:DandbCompany.Latitude}</formula>
    <label>Latitude</label>
    <type>Text</type>
</CustomField>