force-app/main/default/objects/Account/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <formula>ENCODED:[treatNullAsNull]{!ID:DandbCompany.Longitude}</formula>
    <label>Longitude</label>
    <type>Text</type>
</CustomField>