force-app/main/default/objects/Account/fields/Map_the_Account__c.field-meta.xml
<CustomField>
    <fullName>Map_the_Account__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.google.com?q=&quot; &amp; BillingStreet &amp; &quot;%20&quot; &amp; BillingCity &amp; &quot;%20&quot; &amp; BillingState &amp; &quot;%20&quot; &amp; BillingPostalCode, IMAGE(&quot;https://na1.salesforce.com/servlet/servlet.FileDownload?file=0156g0000014W4I&quot;, &quot;Map Address in Google&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map the Account</label>
    <type>Text</type>
</CustomField>