force-app/main/default/objects/Account/fields/Number_of_Employees_Location_Data__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_Location_Data__c</fullName>
    <formula>ENCODED:[treatNullAsNull]{!ID:DandbCompany.EmployeesHere}</formula>
    <label>Number of Employees - Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>