force-app/main/default/objects/Account/fields/Propensity_to_Buy__c.field-meta.xml
<CustomField>
    <fullName>Propensity_to_Buy__c</fullName>
    <label>Propensity to Buy</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>