force-app/main/default/objects/Account/fields/Rating_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Rating_Indicator__c</fullName>
    <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Value__c &gt; 0, &apos;0156g0000014W4G&apos;, &apos;0156g0000014W4H&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Value__c &gt; 1, &apos;0156g0000014W4G&apos;, &apos;0156g0000014W4H&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Value__c &gt; 2, &apos;0156g0000014W4G&apos;, &apos;0156g0000014W4H&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Value__c &gt; 3, &apos;0156g0000014W4G&apos;, &apos;0156g0000014W4H&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Value__c &gt; 4, &apos;0156g0000014W4G&apos;, &apos;0156g0000014W4H&apos;),&apos;&apos;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Indicator</label>
    <type>Text</type>
</CustomField>