force-app/main/default/objects/Account/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>true</active>
    <description>Partner accounts with additional, channel-related information like the Partner Scorecard.</description>
    <label>Partner</label>
</RecordType>