force-app/main/default/objects/Account/listViews/Accounts_with_Account_Group.listView-meta.xml
<ListView>
    <fullName>Accounts_with_Account_Group</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Partner_Type__c</columns>
    <columns>Partner_Program_Level__c</columns>
    <columns>Partner_Certification__c</columns>
    <columns>Region__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ccrz__E_AccountGroup__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Accounts with Account Group</label>
</ListView>