force-app/main/default/objects/Account/listViews/All_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Partner_Type__c</columns>
    <columns>Partner_Program_Level__c</columns>
    <columns>Partner_Certification__c</columns>
    <columns>Region__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
    <language>en_US</language>
</ListView>